cmake_minimum_required(VERSION 3.21)
project(LuoguBook_Base)

set(CMAKE_CXX_STANDARD 14)

# Chapter 1
add_executable(L1-1 Part1/Chapter1/L1-1.cpp)
add_executable(L1-2 Part1/Chapter1/L1-2.cpp)
add_executable(L1-3 Part1/Chapter1/L1-3.cpp)
add_executable(L1-4 Part1/Chapter1/L1-4.cpp)
add_executable(L1-5 Part1/Chapter1/L1-5.cpp)
add_executable(L1-6 Part1/Chapter1/L1-6.cpp)
add_executable(L1-7 Part1/Chapter1/L1-7.cpp)
